# bmad-mcp-server

./: .env.example  .gitignore  .railway.json  BMAD_WORKFLOW_SYSTEM.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  README.md  RELEASE_NOTES_v2.0.md  SECURITY.md  SERENA_INTEGRATION.md  SERENA_STATUS.md  bmad-mcp-architecture-fix.md  bmad_workflow_integration_test_report.json  diagnose.ps1  docker-compose.yml  package-lock.json  package.json  pyproject.toml  railway.json  railway.toml  requirements-dev.txt  requirements.txt  run_server.py  test-integration.js  test_bmad_workflow_full.py  test_import.py  test_quick_serena.py  test_serena_bridge.py  test_serena_final.py  tsconfig.json
.bmad-core/: project.yaml
.github/workflows/: ci.yml
config/: bmad-global-config.yaml
config/bmad-core/: core-config.yaml
config/bmad-core/agents/: analyst.md  architect.md  dev.md  pm.md  qa.md
config/bmad-core/checklists/: code-quality-checklist.md
config/bmad-core/tasks/: development-task.md  research-task.md
config/bmad-core/workflows/: development-workflow.yaml
docs/: api-reference.md
examples/: getting-started.py  real-world-project.py
scripts/: migrate_existing_projects.py  simple_migration.py
src/: __init__.py  server.ts
src/bmad_mcp/: __init__.py  __main__.py  server.py
src/bmad_mcp/agents/: __init__.py  agent_manager.py  analyst.py  architect.py  base_agent.py  coder.py  developer.py  pm.py  qa.py  serena_agent_wrapper.py  serena_bridge.py
src/bmad_mcp/core/: __init__.py  auto_discovery.py  bmad_core_loader.py  bmad_loader.py  console_formatter.py  github_sync.py  global_registry.py  instant_context.py  mcp_auto_reconnect.py  notion_sync.py  project_detector.py  project_templates.py  realtime_updater.py  simulator.py  task_tracker.py  time_cost_tracker.py  time_monitor.py  todowrite_bridge.py  universal_schema.py
src/bmad_mcp/integrations/: __init__.py  auto_sync_manager.py
src/bmad_mcp/routing/: __init__.py  openrouter.py
src/bmad_mcp/tools/: __init__.py  bmad_tools.py  global_system.py  project_template.py  time_tracking.py
src/bmad_mcp/workflows/: __init__.py  orchestrator_agent.py  quality_gates.py  workflow_engine.py  workflow_states.py
templates/project-structure/: project-status.yaml
templates/project-structure/.bmad-core-template/: development-log.md  project-status.yaml
test_workflows/: workflow_bmad_20250818_192327.json  workflow_bmad_20250818_192351.json  workflow_bmad_20250818_192411.json  workflow_bmad_20250818_192433.json  workflow_bmad_20250818_192500.json  workflow_bmad_20250818_192522.json  workflow_bmad_20250818_192636.json
